# proto/authzed/api/v1/watch_service.pb.validate.go
@@ -344,6 +344,40 @@ func (m *WatchResponse) validate(all bool) error {
 
 	// no validation rules for IsCheckpoint
 
+	for idx, item := range m.GetFullRevisionMetadata() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, WatchResponseValidationError{
+						field:  fmt.Sprintf("FullRevisionMetadata[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, WatchResponseValidationError{
+						field:  fmt.Sprintf("FullRevisionMetadata[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return WatchResponseValidationError{
+					field:  fmt.Sprintf("FullRevisionMetadata[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
 	if len(errors) > 0 {
 		return WatchResponseMultiError(errors)
 	}
